--- a/tutorReport2.html
+++ b/tutorReport2.html
@@ -22,14 +22,15 @@
 
         <textarea id="comments" placeholder="Additional comments + recommendations for further learning:
 💡 Tip: if you type <name>, the learner's name will be inserted."></textarea>
-        <button onclick="savedClick()">Save student record</button>
+        <button onclick="savedClick()">💾 Save student record</button>
         <hr />
         <div>
             <label for="course_title">Course title:</label>
             <input type="text" id="course_title" />
             <label for="course_date">Start date:</label>
             <input type="date" id="start_date" />
-            <button onclick="generateReports()">Generate reports for all students</button>
+            <button onclick="generateReports()"> 📜Generate reports for all students</button><hr />
+            <button onclick="deleteCourseData()">❌ Delete last class data and start a new class</button>
         </div>
     </div>
 </body>
