--- a/tutorReport2.html
+++ b/tutorReport2.html
@@ -14,8 +14,8 @@
 <body>
     <div>
         <h1>Tutor feedback generator</h1>
-        <span class="feedback-area">Learner name:</span>
-        <input type="text" id="learner" name="learner" />
+        <label for="learner" class="feedback-area">Learner name:</label>
+        <input type="text" id="learner" name="learner" class="roundEdge" />
         <hr />
         <div id="options"></div>
         <hr />
@@ -26,9 +26,9 @@
         <hr />
         <div>
             <label for="course_title">Course title:</label>
-            <input type="text" id="course_title" />
+            <input type="text" id="course_title" class="roundEdge"/>
             <label for="course_date">Start date:</label>
-            <input type="date" id="start_date" />
+            <input type="date" id="start_date" class="roundEdge" />
             <button onclick="generateReports()"> 📜Generate reports for all students</button><hr />
             <button onclick="deleteCourseData()">❌ Delete last class data and start a new class</button>
         </div>
