--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <hr />
         <div>
-            radioNames: <input type="text" id="radioNames" value="punctuality,camera,engagement,work ethic,mic" />
+            Options: <input type="text" id="radioNames" value="punctuality,camera,engagement,work ethic,mic" />
             <hr />
             states: <input type="text" id="states" value="Positive,Neutral,Negative,N/A" />
             <button onclick="setupOptions()">Reset form</button>
