--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
             Options: <input type="text" id="radioNames" value="punctuality,camera,engagement,work ethic,mic" />
             <hr />
-            states: <input type="text" id="states" value="Positive,Neutral,Negative,N/A" />
+            States: <input type="text" id="states" value="Positive,Neutral,Negative,N/A" />
             <button onclick="setupOptions()">Reset form</button>
         </div>
     </div>
