--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tutor Feedback</title>
     <link href="StyleSheet1.css" rel="stylesheet" />
-    <script>
-        // const radioNames = ['punctuality', 'camera', 'engagement', 'work_ethic','mic'];
-        // const states = ['Positive', 'Neutral', 'Negative', 'N/A'];
-    </script>
     <script src="JavaScript1.js" defer></script>
 </head>
 <body>
@@ -30,7 +26,7 @@
             <input type="text" id="course_title" class="roundEdge"/>
             <label for="course_date">Start date:</label>
             <input type="date" id="start_date" class="roundEdge" />
-            <button onclick="generateReports()"> 📜Generate reports for all students</button><hr />
+            <button onclick="generateReports()"> 📜Generate report</button><hr />
             <button onclick="deleteCourseData()">❌ Delete last class data and start a new class</button>
         </div>
         <hr />
