--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +8,7 @@
     <link href="StyleSheet1.css" rel="stylesheet" />
     <script src="JavaScript1.js" defer></script>
 </head>
+
 <body>
     <div>
         <h1>Tutor feedback generator</h1>
@@ -20,22 +22,28 @@
         <textarea id="comments" placeholder="Additional comments + recommendations for further learning:
 💡 Tip: if you type <name>, the learner's name will be inserted."></textarea>
         <button onclick="savedClick()">💾 Save student record</button>
-        <hr />
-        <div>
+        <!-- <hr /> -->
+        <div id="reportPart">
             <label for="course_title">Course title:</label>
-            <input type="text" id="course_title" class="roundEdge"/>
+            <input type="text" id="course_title" class="roundEdge" />
             <label for="course_date">Start date:</label>
             <input type="date" id="start_date" class="roundEdge" />
-            <button onclick="generateReports()"> 📜Generate report</button><hr />
+            <button onclick="generateReports()"> 📜Generate report</button>
+            <hr />
             <button onclick="deleteCourseData()">❌ Delete last class data and start a new class</button>
         </div>
-        <hr />
-        <div>
-            Options: <input type="text" id="radioNames" value="punctuality,camera,engagement,work ethic,mic" />
-            <hr />
-            States: <input type="text" id="states" value="Positive,Neutral,Negative,N/A" />
-            <button onclick="setupOptions()">Reset form</button>
+        <!-- <hr /> -->
+        <div id="adminPart">
+            <div class="input-group">
+                <span>Options:</span> <input type="text" id="radioNames"
+                    value="punctuality,camera,engagement,work ethic,mic" />
+            </div>
+            <div class="input-group">
+                <span>States:</span> <input type="text" id="states" value="Positive,Neutral,Negative,N/A" />
+                <button onclick="setupOptions()">Reset form</button>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
